<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Actions-->
    <string name="app_name" translateable="false" color="@color/asu_blue">ÅSU Sångbok</string>
    <string name="action_settings">Inställningar</string>
    <string name="action_admin_login">Admin login</string>
    <string name="sync_song">Sync song</string>
    <string name="action_about">Info</string>
    <string name="action_guestbook_string">Gästbok</string>

    <!--Internal strings-->
    <string name="sync_account_type">songbook.asu.ax</string>
    <string name="content_authority">"songbook.asu.ax.songbook"</string>
    <string name="link_to_api">http://songbook.asu.ax/song/create</string>

    <!--Labels-->
    <string name="all_songs" color="@color/asu_blue">Alla sånger</string>
    <string name="event_label" color="@color/asu_blue">Evenemang</string>
    <string name="current_song" color="@color/asu_blue">Current song</string>
    <string name="search_label">Sök sång</string>
    <string name="welcome_label">Välkomen till ÅSU Sångbok</string>
    <string name="info">Skapad av Kristian Johansson (2015) \nEmail: kristian.developing@gmail.com</string>
    <string name="past_events_label">Tidigare evenemang</string>
    <string name="future_events_label">Framtida evenemang</string>
    <string name="post_entry_button_text">Posta inlägg</string>
    <string name="enter_entry">Skriv ditt inlägg här</string>
    <string name="enter_name">Namn</string>
    <string name="confirmation_dialog_title">Bekräfta borttagning</string>
    <string name="really_quit">Är du säker på att du vill ta bort inlägget?</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="cancel">Ångra</string>
    <string name="categories">Kategorier</string>
    <string name="other_category">Övrigt</string>
    <string name="web_page_link">Lägg till sång</string>

    <!--ListItem-->
    <string name="melody">Mel: %1$s</string>
    <string name="poster">Postare: %1$s</string>
    <string name="date">Tidpunkt: %1$s</string>

    <!--Messages-->
    <string name="server_down">Servern är inte tillgänglig, sångboken är inte uppdaterad</string>
    <string name="no_events">Inga evenemang idag</string>
    <string name="no_current_song">Ingen sång sjungs just nu</string>
    <string name="no_songs">Ingen sånglista för detta evenemang</string>
    <string name="post">Skriv ett nytt inlägg</string>
    <string name="make_private">Privat inlägg</string>
    <string name="no_wifi">Kunde inte kontakta servern, sångboken är inte uppdaterad</string>
    <string name="january">january</string>
    <string name="february">februari</string>
    <string name="march">mars</string>
    <string name="april">april</string>
    <string name="may">maj</string>
    <string name="june">juni</string>
    <string name="july">juli</string>
    <string name="august">augusti</string>
    <string name="september">september</string>
    <string name="october">oktober</string>
    <string name="november">november</string>
    <string name="december">december</string>


    <bool name="showEventMenuItem">true</bool>
    <bool name="showCategoryMenuItem">true</bool>
    <bool name="showGuestbookMenuItem">true</bool>
</resources>
