<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_guestbook"
        android:title="@string/action_guestbook_string"
        android:visible="@bool/showGuestbookMenuItem"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_event"
        android:title="@string/event_label"
        android:visible="@bool/showEventMenuItem"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/search_menu_item"
        android:title="@string/search_label"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_category"
        android:title="@string/categories"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_add_song"
        android:title="@string/web_page_link"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
    <!--<item android:id="@+id/action_category"
            android:title="@string/categories"
            app:showAsAction="collapseActionView"/>
    -->