<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Activities.GuestbookActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_allsongs"
        android:title="@string/all_songs"
        app:showAsAction="always"/>

    <!--<item android:id="@+id/action_admin_login"
        android:title="@string/action_admin_login"
        app:showAsAction="never"/> -->

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>