<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Post a new entry"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        >

        <EditText
            android:layout_width="200dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:background="@drawable/border_image"
            android:layout_height="100dp"
            android:text="@string/enter_entry"
            android:selectAllOnFocus="true"
            android:id="@+id/edit_entry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="1dp"
            android:layout_gravity="left">

            <EditText
                android:background="@drawable/border_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:selectAllOnFocus="true"
                android:layout_marginRight="12dp"
                android:text="@string/enter_name"
                android:id="@+id/edit_poster_name" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@drawable/border_image"
                android:id="@+id/make_private_cb"
                android:text="@string/make_private"/>
        </LinearLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:text="Post"
            android:textColor="@color/light_blue"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:text="Cancel"
            android:textColor="@color/light_blue"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>